# nonebot-plugin-bawiki-revive

./: AGENTS.md  README.md  pyproject.toml
nonebot_plugin_bawiki_revive/: __init__.py  config.py  legacy_migration.py  utils.py
nonebot_plugin_bawiki_revive/commands/: __init__.py  arona.py
nonebot_plugin_bawiki_revive/data_source/: request.py
nonebot_plugin_bawiki_revive/data_source/arona/: __init__.py  alias.py  client.py  consts.py  models.py
nonebot_plugin_bawiki_revive/pmn/: __init__.py
nonebot_plugin_bawiki_revive/pmn/res/: base.html.jinja  detail.html.jinja  index.html.jinja
nonebot_plugin_bawiki_revive/pmn/res/css/: base.css  detail.css  index.css
tests/: conftest.py  test_arona.py
